# halo2-practice

./: Cargo.toml  README.md
src/: is_zero.rs  is_zero2.rs  lib.rs
src/range_check/: example1.rs  example2.rs
src/range_check/example2/: table.rs
